[Forms] Selection change by type-ahead doesn't fire 'change' event https://bugs.webkit.org/show_bug.cgi?id=74590

Patch by Yosifumi Inoue <yosin@chromium.org> on 2011-12-21
Reviewed by Kent Tamura.

Source/WebCore:

This patch changes when onchange event fired in select element for:
1 Fire onchange event for type ahead selection.
2 Don't fire onchange event for Enter key. We've already fired onchange event for cursor key
  and type ahead selection. So, onchange for Enter key is redundant. This behavior is
  compatible to IE(9.0.8112.16421) and Opera(9.80) on Windows. FF(8.01) doesn't fire onchange
  by cursor key selection change and type ahead. FF requires Enter key press to fire onchange
  event.

Test: fast/forms/select/menulist-type-ahead-find.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::menuListDefaultEventHandler): Don't fire onchange event for Entry key.
(WebCore::HTMLSelectElement::typeAheadFind): Add DispatchChangeEvent when
calling selectOption method.

LayoutTests:

* fast/events/onchange-select-popup-expected.txt: Change for onchange event by type ahead.
* fast/forms/select/menulist-type-ahead-find-expected.txt: Added.
* fast/forms/select/menulist-type-ahead-find.html: Added.
* platform/chromium/test_expectations.txt: Enable fast/forms/{select-double-onchange,select-script-onchange}.html for Chrome/Linux.

Canonical link: https://commits.webkit.org/91809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103497 268f45cc-cd09-0410-ab3c-d52691b4dbfc